--- a/css/main.css
+++ b/css/main.css
@@ -30,12 +30,36 @@
 	width: 300px;
 }
 
-.panel.facilities {
+.panel.regions {
 	left: 300px;
 	right: 300px;
 }
 
-.panel.regions {
+.panel.facilities {
 	right: 0;
 	width: 300px;
+}
+
+.survivor-meter, .resource-meter {
+	width: 300px;
+	margin: 5px;
+}
+
+.meter {
+	margin: 10px;
+	position:relative;
+	border:1px solid black;
+	background-color:white;
+	height: 10px;
+	width: 100px;
+}
+
+.progress-bar {
+	position: absolute;
+	top:0;
+	bottom:0;
+	left:0;
+	width:0%;
+	border:none;
+	background-color: black;
 }
