--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,28 @@
+.subregion {
+	position:relative;
+	height: 100px;
+	border: 1px solid black;
+	border-radius: 2px;
+	margin: 5px;
+}
+
+.progress-bar {
+	position:absolute;
+	right:0; left:0; bottom:0;
+	height: 10px;
+	background-color:white;
+}
+
+.progress {
+	position:absolute;
+	top:0;left:0;bottom:0;
+	background-color:black;
+}
+
+
+
+
+/*
 .panel {
 	position: absolute;
 	background-color: gray;
@@ -62,4 +87,4 @@
 	width:0%;
 	border:none;
 	background-color: black;
-}
+}*/
