--- a/css/main.css
+++ b/css/main.css
@@ -1,22 +1,46 @@
+body {
+	color: white;
+	background-color: black;
+	font-family: monospace;
+}
+
+#resources {
+	position:absolute;
+	top:10em;
+	left:0;
+	right:10em;
+	bottom:0;
+	padding: 10px;
+}
+
+#region {
+	padding: 10px;
+	position:absolute;
+	top:10em;
+	left:10em;
+	bottom:0;
+	right:10em;
+}
 .subregion {
+	padding: 10px;
 	position:relative;
 	height: 100px;
-	border: 1px solid black;
-	border-radius: 2px;
+	border: 2px solid white;
+	/*border-radius: 2px;*/
 	margin: 5px;
 }
 
 .progress-bar {
 	position:absolute;
 	right:0; left:0; bottom:0;
-	height: 10px;
-	background-color:white;
+	height: 2em;
+	background-color:black;
 }
 
 .progress {
 	position:absolute;
 	top:0;left:0;bottom:0;
-	background-color:black;
+	background-color:white;
 }
 
 
