--- a/css/main.css
+++ b/css/main.css
@@ -4,7 +4,7 @@ body {
 	font-family: monospace;
 }
 
-#resources {
+.resources-panel {
 	position:absolute;
 	top:10em;
 	left:0;
@@ -13,7 +13,7 @@ body {
 	padding: 10px;
 }
 
-#region {
+.location-panel {
 	padding: 10px;
 	position:absolute;
 	top:10em;
