--- a/views/main.html
+++ b/views/main.html
@@ -4,7 +4,21 @@
 <div id="resourcesPanel" ng-controller="resourcePanelController">
 	<h3>resources</h3>
 	<ul>
-		<li ng-repeat="r in resources" zg-resource="r"></li>
+		<li>
+			{{threat.name}}:{{threat.current}}/{{threat.max}}
+			<div zg-status-bar percent-full="threat.percentFull"></div>
+		</li>
+		<li>
+			{{morale.name}}:{{morale.current}}/{{morale.max}}
+			<div class="status-bar">
+				<div class="status-bar-inner" style="right:50%;background-color:lightcoral" ng-style="{'width':morale.percentFullNegative+'%'}"></div>
+				<div class="status-bar-inner" style="left:50%;background-color:lightgreen" ng-style="{'width':morale.percentFullPositive+'%'}"></div>
+			</div>
+			new survivors:
+			<div zg-status-bar percent-full="morale.survivorProgressPercent"></div>
+			<hr>
+		</li>
+		<li ng-repeat="r in standardResources" zg-resource="r"></li>
 	</ul>
 </div>
 <div id="locationPanel" ng-controller="locationPanelController">
