costless upgrading, preliminary logging

--- a/views/main.html
+++ b/views/main.html
@@ -30,8 +30,9 @@
 </div>
 <div id="logPanel" ng-controller="logController">
 	<ul>
-		<li>{{firstMessage}}</li>
-		<li>{{secondMessage}}</li>
-		<li>{{thirdMessage}}</li>
+		<li>{{messageQueue[0]}}</li>
+		<li>{{messageQueue[1]}}</li>
+		<li>{{messageQueue[2]}}</li>
+		<li>{{messageQueue[3]}}</li>
 	</ul>
 </div>
