--- a/styles/css.css
+++ b/styles/css.css
@@ -24,17 +24,20 @@ button:hover {
 	background-color: white;
 	position:absolute;
 	height:100%;
+	transition:width 1s;
 }
 
 ul {
-	list-style-type: none
+	list-style-type: none;
+	padding:0px;
 }
 
 .subregion {
+	position:relative;
 	border: 1px solid white;
 	margin: 10px;
 	padding: 10px;
-	width: 600px;
+	width: 80%;
 }
 
 #resourcesPanel {
@@ -45,11 +48,37 @@ ul {
 
 #locationPanel {
 	position:absolute;
-	right:0;
+	right:300px;
 	left:200px;
 }
 #logPanel {
 	position:absolute;
-	bottom:0px;
-	height:100px;
+	right:0;
+	width:300px;
+	top:300px;
+	color:gray;
+}
+#statusPanel {
+	position:absolute;
+	right:0px;
+	top:0px;
+	width:300px;
+	height:300px;
+}
+.log-message-new {
+	color:white;
+	transition:color 0s;
+}
+.log-message {
+	color:gray;
+	transition:color 1s;
+}
+.status-indicator {
+	display:inline;
+	border: 1px solid white;
+	width: 100px;
+	height: 20px;
+	line-height: 20px;
+	margin: 10px;
+	text-align: center;
 }
