--- a/styles/main.css
+++ b/styles/main.css
@@ -35,6 +35,8 @@ body {
 	right:0; left:0; bottom:0;
 	height: 2em;
 	background-color:black;
+	-webkit-transition: width 1s; /* For Safari 3.1 to 6.0 */
+	transition: width 1s;
 }
 
 .progress {
