--- a/views/main.html
+++ b/views/main.html
@@ -10,27 +10,31 @@
 		<li>
 			{{morale.name}}:{{morale.current}}
 			<div class="status-bar">
-				<div ng-show="morale.percentFull<0" class="status-bar-inner" style="right:50%;background-color:lightcoral" ng-style="{'width':-morale.percentFull/2+'%'}"></div>
-				<div ng-show="morale.percentFull>=0" class="status-bar-inner" style="left:50%;background-color:lightgreen" ng-style="{'width':morale.percentFull/2+'%'}"></div>
+				<div ng-show="morale.percentFull<0" class="status-bar-inner" style="position:absolute;right:50%;background-color:lightcoral" ng-style="{'width':-morale.percentFull/2+'%'}"></div>
+				<div ng-show="morale.percentFull>=0" class="status-bar-inner" style="position:absolute;left:50%;background-color:lightgreen" ng-style="{'width':morale.percentFull/2+'%'}"></div>
 			</div>
-			<!--<div class="status-bar">
-				<div class="status-bar-inner" style="right:50%;background-color:lightcoral" ng-style="{'width':moraleService.moralePercentFullNegative/2+'%'}"></div>
-				<div class="status-bar-inner" style="left:50%;background-color:lightgreen" ng-style="{'width':moraleService.moralePercentFullPositive/2+'%'}"></div>
-			</div>
-			{{moraleService.survivorProgressText}}
-			<div zg-status-bar percent-full="moraleService.survivorProgressPercentFull"></div>-->
 		</li>
-		<hr>
 		<li ng-repeat="r in standardResources" zg-resource="r"></li>
 	</ul>
 </div>
 <div id="locationPanel" ng-controller="locationPanelController">
-	<h3>location</h3>
-	<div ng-show="activeTab == 'neighborhood'">neighborhood</div>
-	<div ng-show="true">
-		<ul><li ng-repeat="s in region.subregions" zg-subregion="s"></li></ul>
+	<h3 class='tab-link'>
+		<span ng-class="{'active-tab-link':neighborhoodIsActive}" ng-click="gotoNeighborhood()"> neighborhood </span>
+		<span ng-show="regionIsActive || subregionIsActive"> > <span ng-class="{'active-tab-link':regionIsActive}" ng-click="gotoRegion()">{{activeRegion.name}}</span></span>
+		<span ng-show="subregionIsActive"> > <span ng-class="{'active-tab-link':subregionIsActive}" ng-click="gotoSubregion()">subregion</span>
+	</h3>
+	<div ng-show="neighborhoodIsActive">
+		<h1>neighborhood</h1>
+		<button ng-repeat="r in neighborhood.regions" ng-click="gotoRegion(r)">{{r.name}}</button>
 	</div>
-	<div ng-show="activeTab == 'subregion'">subregion</div>
+	<div ng-show="regionIsActive">
+		<h1>{{activeRegion.name}}</h1>
+		<ul><li ng-repeat="s in activeRegion.subregions" zg-subregion="s"></li></ul>
+	</div>
+	<div ng-show="subregionIsActive">
+		<h1>{{activeSubregion.name}}</h1>
+		<div zg-subregion-replacement></div>
+	</div>
 </div>
 <div id="statusPanel" ng-controller="statusController">
 	<ul><li ng-repeat="s in statuses" class="status-indicator">{{s.name}}</li></ul>
