--- a/styles/css.css
+++ b/styles/css.css
@@ -63,6 +63,7 @@ ul {
 	position:absolute;
 	left:0;
 	width:200px;
+	padding-left:10px;
 }
 
 #locationPanel {
@@ -107,4 +108,35 @@ ul {
 }
 .active-tab-link {
 	color:white;
+}
+
+.tooltip {
+	font-family:sans-serif;
+	font-size:12px;
+	position: absolute;
+	min-width:150px;
+	max-width:500px;
+	padding-left:10px;
+	color: black;
+	background: white;
+	text-align: left;
+	border-radius: 6px;
+	border: 1px solid black;
+	-webkit-box-shadow: 0 5px 10px rgba(0,0,0,.2);
+	box-shadow: 0 5px 10px rgba(0,0,0,.2);
+	z-index: 1000;
+	margin-left:115px;
+	margin-top:-25px;
+}
+.tooltip:after {
+  content: '';
+  position: absolute;
+  top: 50%;
+  right: 100%;
+  margin-top: -8px;
+  width: 0; height: 0;
+  border-right: 8px solid white;
+  border-top: 8px solid transparent;
+  border-bottom: 8px solid transparent;
+  z-index: 1000;
 }
