--- a/views/main.html
+++ b/views/main.html
@@ -3,18 +3,18 @@
 <div id="resourcesPanel" ng-controller="resourcePanelController">
 	<h3>resources</h3>
 	<ul>
-		<li>
+		<li tooltip="{{threat.tooltip}}">
 			{{threat.name}}:{{threat.current}}/{{threat.max}}
 			<div zg-status-bar percent-full="threat.percentFull"></div>
 		</li>
-		<li>
+		<li tooltip="{{morale.tooltip}}">
 			{{morale.name}}:{{morale.current}}
 			<div class="status-bar">
 				<div ng-show="morale.percentFull<0" class="status-bar-inner" style="position:absolute;right:50%;background-color:lightcoral" ng-style="{'width':-morale.percentFull/2+'%'}"></div>
 				<div ng-show="morale.percentFull>=0" class="status-bar-inner" style="position:absolute;left:50%;background-color:lightgreen" ng-style="{'width':morale.percentFull/2+'%'}"></div>
 			</div>
 		</li>
-		<li ng-repeat="r in standardResources" zg-resource="r"></li>
+		<li ng-repeat="r in standardResources" zg-resource="r" tooltip="{{r.tooltip}}"></li>
 	</ul>
 </div>
 <div id="locationPanel" ng-controller="locationPanelController">
