--- a/styles/css.css
+++ b/styles/css.css
@@ -131,7 +131,7 @@ ul {
 .tooltip:after {
   content: '';
   position: absolute;
-  top: 50%;
+  top: 18px;
   right: 100%;
   margin-top: -8px;
   width: 0; height: 0;
