--- a/styles/css.css
+++ b/styles/css.css
@@ -6,6 +6,8 @@ body {
 	border: 1px solid black;
 	width: 160px;
 	height: 160px;
+	margin:2px;
+	padding:2px;
 }
 
 .active-tab {
@@ -17,4 +19,10 @@ li {
 	border: 1px solid black;
 	padding: 2px;
 	margin: 2px;
+}
+
+.worker {
+	width:10px;
+	height:10px;
+	background-color:blue;
 }
