--- a/styles/css.css
+++ b/styles/css.css
@@ -1,28 +1,83 @@
 body {
 	cursor:default;
+	font-family: "Century Gothic";
+	/*background-image: url(images/RustMixed0093_M.jpg);*/
+	font-weight:bold;
+}
+
+
+.active-tab {
+	color:white;
+}
+
+h3, h4 {
+	color:#aaaaaa;
+	text-align:center;
+}
+table {
+	margin-left:auto;
+	margin-right:auto;
+}
+li {
+	display: inline;
+	padding: 2px;
+	margin: 2px;
+}
+
+.worker {
+	width: 30px;
+	height: 30px;
+	background-color: blue;
+	margin: 5px;
+	border-radius: 100%;
+	border: 1px solid black;
+	background-color: darkgreen;
+	box-shadow: 0 0 2px 1px, 0 0 1px 0.5px white inset;
+}
+
+.wide-info-panel {
+	border: 1px solid black;
+	margin: 2px;
+	padding: 2px;
+	background-image: linear-gradient(to bottom, rgba(200, 200, 200, .6), rgba(100, 100, 100, .6));
+	box-shadow: 0px 0px 5px 2px black, 0px 0px 1px 0px white inset;
+	margin-bottom:5px;
+}
+
+#content {
+	left: 100px;
+	right: 100px;
+	position: absolute;
+	background-image: linear-gradient(to bottom, rgba(56, 49, 39, .8), rgba(56, 49, 39, .8));
+	height: 100%;
+
+	/*box-shadow: 0px 0px 10px 5px black;*/
+
+	/*border-radius: 10px;*/
+	padding:10px;
+	box-shadow: 0px 0px 5px 2px white, 0px 0px 1px 0px white inset;
+	border: 2px solid black;
 }
 
 .location {
 	border: 1px solid black;
 	width: 160px;
 	height: 160px;
-	margin:2px;
-	padding:2px;
-}
-
-.active-tab {
-	color:gray;
-}
-
-li {
-	display: inline;
-	border: 1px solid black;
-	padding: 2px;
 	margin: 2px;
+	padding: 2px;
+	background-image: linear-gradient(to bottom, rgba(200, 200, 200, .6), rgba(100, 100, 100, .6));
+	box-shadow: 0px 0px 5px 2px black, 0px 0px 1px 0px white inset;
 }
 
-.worker {
-	width:10px;
-	height:10px;
-	background-color:blue;
+button:active {
+background-color: gray;
+}
+button:hover {
+background-color: darkgray;
+}
+button {
+background-color: lightgray;
+border: 1px solid black;
+margin: 4px;
+box-shadow: 0 0 1px .5px black;
 }
