--- a/styles/css.css
+++ b/styles/css.css
@@ -45,14 +45,10 @@ li {
 }
 
 #content {
-	left: 100px;
-	right: 100px;
-	position: absolute;
+	margin-left: 100px;
+	margin-right: 100px;
 	background-image: linear-gradient(to bottom, rgba(56, 49, 39, .8), rgba(56, 49, 39, .8));
-	height: 100%;
-
 	/*box-shadow: 0px 0px 10px 5px black;*/
-
 	/*border-radius: 10px;*/
 	padding:10px;
 	box-shadow: 0px 0px 5px 2px white, 0px 0px 1px 0px white inset;
@@ -67,6 +63,7 @@ li {
 	padding: 2px;
 	background-image: linear-gradient(to bottom, rgba(200, 200, 200, .6), rgba(100, 100, 100, .6));
 	box-shadow: 0px 0px 5px 2px black, 0px 0px 1px 0px white inset;
+	position:relative;
 }
 
 button:active {
@@ -81,3 +78,77 @@ border: 1px solid black;
 margin: 4px;
 box-shadow: 0 0 1px .5px black;
 }
+
+.popup-box {
+	z-index:9001;
+	border:1px solid black;
+	background-color:white;
+	position:fixed;
+	width:400px;height:400px;
+	left:50%;
+	top:50%;
+	margin-left:-200px;
+	margin-top:-200px;
+	padding:15px;
+	text-align:center;
+	vertical-align: middle;
+}
+.popup-overlay {
+	position:fixed;
+	left:0;
+	top:0;
+	height:auto;
+	min-height:100%;
+	min-width:100%;
+	background-color:gray;
+	opacity:.75;
+}
+
+.status-bar {
+	height: 20px;
+	bottom: 1px;
+	position: absolute;
+	left: 1px;
+	right: 1px;
+}
+.status-bar-inner {
+	background-color: rgb(139, 26, 26);
+	position: relative;
+	height: 100%;
+	box-shadow: 0 0 1px 2px;
+}
+
+
+
+/*
+.tooltip {
+	font-family:sans-serif;
+	font-size:12px;
+	position: absolute;
+	min-width:200px;
+	max-width:500px;
+	padding-left:10px;
+	color: black;
+	background: white;
+	text-align: left;
+	border-radius: 6px;
+	border: 1px solid black;
+	-webkit-box-shadow: 0 5px 10px rgba(0,0,0,.2);
+	box-shadow: 0 5px 10px rgba(0,0,0,.2);
+	z-index: 1000;
+	margin-left:115px;
+	margin-top:-25px;
+}
+.tooltip:after {
+  content: '';
+  position: absolute;
+  top: 18px;
+  right: 100%;
+  margin-top: -8px;
+  width: 0; height: 0;
+  border-right: 8px solid white;
+  border-top: 8px solid transparent;
+  border-bottom: 8px solid transparent;
+  z-index: 1000;
+}
+*/
