--- a/styles/css.css
+++ b/styles/css.css
@@ -5,7 +5,6 @@ body {
 	font-weight:bold;
 }
 
-
 .active-tab {
 	color:white;
 }
@@ -18,10 +17,14 @@ table {
 	margin-left:auto;
 	margin-right:auto;
 }
+ul {
+	display:0;
+	margin:0;
+}
 li {
-	display: inline;
-	padding: 2px;
-	margin: 2px;
+	display: inline-block;
+	padding: 0px;
+	margin: 0px;
 }
 
 .worker {
@@ -118,7 +121,11 @@ box-shadow: 0 0 1px .5px black;
 	box-shadow: 0 0 1px 2px;
 }
 
-
+.resource-meter-container {
+	position:relative;
+	width:100px;
+	height:25px;"
+}
 
 /*
 .tooltip {
