--- a/styles/css.css
+++ b/styles/css.css
@@ -23,6 +23,9 @@ li {
 	padding: 2px;
 	margin: 2px;
 }
+ul {
+	margin: 0;
+}
 
 .worker {
 	width: 30px;
@@ -37,11 +40,12 @@ li {
 
 .wide-info-panel {
 	border: 1px solid black;
-	margin: 2px;
 	padding: 2px;
 	background-image: linear-gradient(to bottom, rgba(200, 200, 200, .6), rgba(100, 100, 100, .6));
 	box-shadow: 0px 0px 5px 2px black, 0px 0px 1px 0px white inset;
-	margin-bottom:5px;
+	/*margin: 2px;
+	margin-bottom:5px;*/
+	margin:0;
 }
 
 #content {
@@ -119,6 +123,24 @@ box-shadow: 0 0 1px .5px black;
 }
 
 
+
+/* box-shadows */
+
+.shadow-level-1 {
+	box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+}
+.shadow-level-2 {
+	box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+}
+.shadow-level-3 {
+	box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+}
+.shadow-level-4 {
+	box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+}
+.shadow-level-5 {
+	box-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22);
+}
 
 /*
 .tooltip {
