--- a/views/incomingAttack.html
+++ b/views/incomingAttack.html
@@ -1,12 +1,4 @@
-<!--<div id="hordePanel" ng-controller="hordePanelController">
-	<div class="wide-info-panel">
-		{{horde.size}} Zombies vs {{defense.totalChangePerSecond}} Defense; Attack in: {{attackProgress.attackIn}}
-	</div>
-	<div class="wide-info-panel">
-		Threat: {{threat.totalChangePerSecond}}; Next Zombie Progress {{horde.nextZombieProgress}}
-	</div>
-</div>-->
-
-<div id="panel-incomingAttack" class="panel">
-Attack Incoming!
+<div id="panel-incomingAttack" class="panel" ng-controller="incomingAttackPanelController">
+	<h1>Attack Incoming!</h1>
+	{{horde.size}} Zombies vs {{defense.totalChangePerSecond}} Defense; Attack in: {{attackProgress.attackIn}}
 </div>
