--- a/views/morale.html
+++ b/views/morale.html
@@ -1,3 +1,10 @@
-<div id="panel-morale" class="panel">
-Morale
+<div id="panel-morale" class="panel" ng-controller="moralePanelController">
+	<h1>Morale</h1>
+	<div class="morale-counter">
+		{{morale.totalChangePerSecond}}
+	</div>
+	<!--<div style="font-size:8pt;">
+		{{moraleSurvivorChange.text}}:{{moraleSurvivorChange.progress}}
+	</div>-->
+	<div zg-status-bar percent-full="morale.percentFull" class="resource-meter-container"></div>
 </div>
