--- a/views/threat.html
+++ b/views/threat.html
@@ -1,3 +1,11 @@
-<div id="panel-threat" class="panel">
-Threat
+<div id="panel-threat" class="panel" ng-controller="threatPanelController">
+	<h1>Threat</h1>
+	<div class="threat-counter">
+		{{threat.totalChangePerSecond}}
+	</div>
+	<!--<div style="font-size:8pt;">
+		Next Zombie Progress {{horde.nextZombieProgress}}
+	</div>-->
+	<div zg-status-bar percent-full="threat.percentFull" class="resource-meter-container"></div>
+
 </div>
