--- a/views/directives/statusBar.html
+++ b/views/directives/statusBar.html
@@ -1,3 +1,4 @@
 <div class="status-bar">
-	<div class="status-bar-inner" ng-style="{'width':percentFull+'%'}"style="height:100%;"></div>
+	<div class="status-bar-inner" ng-style="{'width':statusObject.percentFull+'%'}"></div>
+	<div class="status-bar-label">{{statusObject.text}}</div>
 </div>
