--- a/views/threat.html
+++ b/views/threat.html
@@ -6,6 +6,6 @@
 	<!--<div style="font-size:8pt;">
 		Next Zombie Progress {{horde.nextZombieProgress}}
 	</div>-->
-	<div zg-status-bar percent-full="threat.percentFull" class="resource-meter-container"></div>
+	<div zg-status-bar status-object="threat.status" class="resource-meter-container"></div>
 
 </div>
