--- a/views/morale.html
+++ b/views/morale.html
@@ -6,5 +6,6 @@
 	<!--<div style="font-size:8pt;">
 		{{moraleSurvivorChange.text}}:{{moraleSurvivorChange.progress}}
 	</div>-->
-	<div zg-status-bar percent-full="morale.percentFull" class="resource-meter-container"></div>
+	<!--<div zg-status-bar percent-full="morale.percentFull" class="resource-meter-container"></div>-->
+	<div zg-status-bar status-object="morale.status" class="resource-meter-container"></div>
 </div>
