--- a/views/incomingAttack.html
+++ b/views/incomingAttack.html
@@ -1,4 +1,4 @@
-<div id="panel-incomingAttack" class="panel" ng-controller="incomingAttackPanelController">
+<div id="panel-incomingAttack" class="panel" ng-controller="incomingAttackPanelController" ng-class="featureLockService.attackPanelClass">
 
 	<h1>Attack Incoming!</h1>
 
