--- a/views/morale.html
+++ b/views/morale.html
@@ -1,4 +1,4 @@
-<div id="panel-morale" class="panel" ng-controller="moralePanelController">
+<div id="panel-morale" class="panel" ng-controller="moralePanelController" ng-class="featureLockService.moralePanelClass">
 	<h1>Morale</h1>
 	<div class="morale-counter">
 		{{morale.totalChangePerSecond}}
