--- a/views/resources.html
+++ b/views/resources.html
@@ -1,10 +1,4 @@
-<!--<div class="wide-info-panel" id="resourcePanel" ng-controller="resourcePanelController">
-	<ul>
-		<li ng-repeat="r in resources" zg-resource="r" tooltip="{{r.tooltip}}"></li>
-	</ul>
-</div>-->
-
-<div id="panel-resources" class="panel" ng-controller="resourcePanelController">
+<div id="panel-resources" class="panel" ng-controller="resourcePanelController" ng-class="featureLockService.resourcesPanelClass">
 	<h1>Resources</h1>
 	<ul>
 		<li ng-repeat="r in resources" zg-resource="r" tooltip="{{r.tooltip}}"></li>
